--- a/frontend/airline-website/package.json
+++ b/frontend/airline-website/package.json
@@ -4,16 +4,23 @@
   "private": true,
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "draft-js": "^0.11.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.2.3"
+    "reactstrap": "^9.2.3",
+    "recharts": "^2.15.0",
+    "styled-components": "^6.1.13"
   },
   "scripts": {
     "start": "PORT=3002 react-scripts start",
