--- a/frontend/airline-website/package.json
+++ b/frontend/airline-website/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
